<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/hint_logo"
            android:id="@+id/iv_logo"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/logotext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_silahkan"
            android:textAlignment="center"
            android:layout_below="@id/iv_logo"
            android:layout_marginBottom="50dp"
            android:text="@string/hint_silahkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:drawablePadding="12dp"
            android:inputType="text"
            android:autofillHints="@string/hint_username"
            android:hint="@string/hint_username"
            android:drawableStart="@drawable/ic__person"
            android:id="@+id/et_username"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tv_silahkan"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:drawablePadding="12dp"
            android:autofillHints="@string/hint_password"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:id="@+id/et_password"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/et_username"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_sign_in" />

        <TextView
            android:id="@+id/tv_createAccount"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_below="@id/btn_login"
            android:text="@string/hint_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</LinearLayout>